[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "chir.py"
version = "0.0.1"
description = ""
authors = [
  "Stian Lode <stian.lode@gmail.com>",
]
license = "MIT"
readme = "README.md"
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
]
packages = [
  { include ="chirpy", from = "src" },
]


[tool.poetry.dependencies]
aiohttp = "^3.8.1"
python = "^3.10"
pydantic = "^2"
requests = "^2.25"
typing-extensions = "*"
pyyaml = "^6.0.1"
fastapi = {extras = ["all"], version = "^0.104.1"}
uvicorn = "^0.24.0.post1"
bcrypt = "^4.0.1"
pyjwt = "^2.8.0"
ipython = "^8.18.1"

[tool.poetry.scripts]
chirpy = "chirpy.api:main"
chirp-at = "chirpy.client:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
coverage = "^7.3.2"
mypy = "^1.7.1"
black = "^23.11.0"
pytest-black = "^0.3.12"
pytest-mypy = "^0.10.3"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.pytest.ini_options]
addopts = [
  "--black",
  "--mypy",
  "--strict-markers",
  "--disable-pytest-warnings",
]
python_files = ["test_*.py",]
testpaths = ["src", "tests"]
flake8-max-line-length = 100
flake8-max-doc-length = 100
flake8-ignore = [
  "E203",
  "D102",
  "D400",
  "D107",
  "D100",
  "D103"
]

[tool.mypy]
python_version = "3.10"
pretty = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
show_traceback = true
show_error_codes = true
strict_optional = true
strict_equality = true
no_implicit_optional = true
check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_no_return = true

[[tool.mypy.overrides]]
module = "tests.*"
warn_no_return = false

[tool.coverage.run]
branch = true
source = ["chirpy", "tests"]
omit = ["examples"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 100
